@@ -31,6 +31,7 @@ modules 3.3.0
 	* Reworked configuration and Makefile for fine-grain control of
 	  certain paths and config files.
 	* Removed the $MODULESHOME env.var. which is not used at all.
+	* Fixed the module purge corruption (Poor Yorick)
 
 ****************************   Release 3.2 ******************************
 Modules 3.2.9
